# first-person-hopper

./: .gitignore  Cargo.toml  README.md  build.rs  index.html
assets/sprites/raw-art-files/: easy_ball.kra  hard_ball.kra  medium_ball.kra  menu_background.kra
src/: gameover.rs  ingame.rs  main.rs  mainmenu.rs
src/gameover/: gameover_ui.rs  mod.rs
src/ingame/: animations.rs  gameplay.rs  ingame_ui.rs  mod.rs  spawn.rs  tempCodeRunnerFile.rs  ui.rs
src/mainmenu/: mainmenu_ui.rs  mod.rs
