[package]
name = "bevy-2d-fps"
version = "0.1.0"
edition = "2021"
author = "HasChad"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.11.2"
bevy_rapier2d = "0.22.0"
bevy_cursor = "0.1.1"
benimator = "4.1.3"
alea = "0.2.2"

[workspace]
members = ["."]