[package]
name = "bevy-2d-fps"
version = "0.1.1"
edition = "2021"
authors = ["HasChad"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.11.2", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "png",
    "hdr",
    "zstd",
    "x11",
    "ktx2",
    "filesystem_watcher",
    "tonemapping_luts",
    "webgl2"
] }
bevy_kira_audio = "0.17.0"
bevy_rapier2d = "0.22.0"
bevy_embedded_assets = "0.8.0"
benimator = "4.1.3"
rand = "0.8.5"
winit = "0.28.6"
image = "0.24.7"

[workspace]
members = ["."]

[build-dependencies]
winres = "0.1.12"